@@ -4,11 +4,9 @@ import java.net.MalformedURLException;
 import java.net.URL;
 
 import org.eclipse.swt.graphics.ImageData;
+import org.eclipse.swt.graphics.RGB;
 import org.eclipse.swt.graphics.Rectangle;
-import org.kalypso.ogc.core.exceptions.ExceptionCode;
-import org.kalypso.ogc.core.exceptions.OWSException;
-import org.kalypso.ogc.core.service.OGCRequest;
-import org.kalypso.ogc.core.utils.OWSUtilities;
+import org.eclipse.swt.widgets.Display;
 
 import de.openali.odysseus.chart.factory.config.ChartConfigurationLoader;
 import de.openali.odysseus.chart.factory.config.ChartExtensionLoader;
@@ -20,16 +18,23 @@ import de.openali.odysseus.chart.framework.model.IChartModel;
 import de.openali.odysseus.chart.framework.model.exception.ConfigurationException;
 import de.openali.odysseus.chart.framework.model.impl.ChartModel;
 import de.openali.odysseus.chart.framework.util.img.ChartPainter;
+import de.openali.odysseus.chart.framework.view.IChartComposite;
 import de.openali.odysseus.chartconfig.x020.ChartConfigurationDocument;
+import de.openali.odysseus.service.ods.util.DisplayHelper;
+import de.openali.odysseus.service.ods.util.HeadlessChart;
 import de.openali.odysseus.service.ods.util.ImageOutput;
 import de.openali.odysseus.service.ods.util.ODSChartManipulation;
+import de.openali.odysseus.service.ows.exception.OWSException;
+import de.openali.odysseus.service.ows.request.RequestBean;
 
 /**
  * @author burtscher IODS operation to display an image containing a chart
  */
 public class GetChart extends AbstractODSDisplayOperation implements Runnable
 {
+
   /**
+   * @throws OWSException
    * @see java.lang.Runnable#run()
    */
   @Override
@@ -39,7 +44,7 @@ public class GetChart extends AbstractODSDisplayOperation implements Runnable
 
     int width = 500;
     int height = 400;
-    final OGCRequest req = getRequest();
+    final RequestBean req = getRequest();
     final String reqWidth = req.getParameterValue( "WIDTH" );
     final String reqHeight = req.getParameterValue( "HEIGHT" );
     final String reqName = req.getParameterValue( "NAME" );
@@ -51,6 +56,7 @@ public class GetChart extends AbstractODSDisplayOperation implements Runnable
     // der Name muss da sein, sonst kann kein Chart ausgewählt werden
     if( reqName != null )
     {
+      final Display display = DisplayHelper.getInstance().getDisplay();
       final String sceneId = req.getParameterValue( "SCENE" );
 
       final ChartConfigurationDocument scene = getEnv().getConfigLoader().getSceneById( sceneId );
@@ -58,8 +64,7 @@ public class GetChart extends AbstractODSDisplayOperation implements Runnable
       URL context = null;
       try
       {
-        context = new URL(ccl.getDocumentSource());
-        //context = getEnv().getConfigDir().toURI().toURL();
+        context = getEnv().getConfigDir().toURI().toURL();
       }
       catch( final MalformedURLException e1 )
       {
@@ -74,7 +79,7 @@ public class GetChart extends AbstractODSDisplayOperation implements Runnable
       }
       catch( final ConfigChartNotFoundException e )
       {
-        setException( new OWSException( "No chart available by NAME '" + reqName + "'", OWSUtilities.OWS_VERSION, "en", ExceptionCode.INVALID_PARAMETER_VALUE, null ) );
+        setException( new OWSException( OWSException.ExceptionCode.INVALID_PARAMETER_VALUE, e.getMessage(), "No chart available by NAME '" + reqName + "'" ) );
         return;
       }
       catch( final ConfigurationException e )
@@ -85,25 +90,38 @@ public class GetChart extends AbstractODSDisplayOperation implements Runnable
          */
         e.printStackTrace();
       }
-      try
+
+      // FIXME: create empty model instead
+      final HeadlessChart hc = new HeadlessChart( model, new RGB( 255, 255, 255 ) );
+      final IChartComposite chart = hc.getChart();
+
+      if( chart != null )
       {
-        ODSChartManipulation.manipulateChart( model, req );
+        try
+        {
+          ODSChartManipulation.manipulateChart( chart.getChartModel(), req );
+        }
+        catch( final OWSException e )
+        {
+          setException( e );
+          return;
+        }
+        final ChartPainter chartPainter = new ChartPainter( chart.getChartModel(), new Rectangle(0,0, width, height ) );
+        final ImageData id = chartPainter.getImageData();//ChartImageFactory.createChartImage( chart.getChartModel(), new Point( width, height ) );
+        if( id != null )
+          ImageOutput.imageResponse( req, getResponse(), id );
+        else
+        {
+          setException( new OWSException( OWSException.ExceptionCode.INVALID_PARAMETER_VALUE, "", "" ) );
+          return;
+        }
       }
-      catch( OWSException e )
-      {
-        setException( e );
-        return;
-      }
-      final ChartPainter chartPainter = new ChartPainter( model, new Rectangle( 0, 0, width, height ) );
-      final ImageData id = chartPainter.getImageData();// ChartImageFactory.createChartImage( chart.getChartModel(),
-      // new Point( width, height ) );
-      if( id != null )
-        ImageOutput.imageResponse( req, getResponse(), id );
-      else
-      {
-        setException( new OWSException( "", OWSUtilities.OWS_VERSION, "en", ExceptionCode.INVALID_PARAMETER_VALUE, null ) );
-        return;
-      }
+      hc.dispose();
+    }
+    else
+    {
+      setException( new OWSException( OWSException.ExceptionCode.MISSING_PARAMETER_VALUE, "Missing mandatory parameter 'NAME'", getRequest().getUrl() ) );
+      return;
     }
   }
 }
